--- a/www/index.html
+++ b/www/index.html
@@ -16,48 +16,100 @@
 	</script>
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 
+	<link rel="stylesheet" type="text/css" href="css/app.css" />
+
+	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/cipher.js"></script>
+	<script type="text/javascript" src="js/note.js"></script>
 	<script type="text/javascript">
 
-		var cipher = new CipherObject(-2);
+		document.addEventListener("deviceready", test, false);
 
-		testText = "Hello";
+		function test() {
 
-		window.alert("The text: " + testText);
+		  var note = new NoteObject();
+		  var cipher = new CipherObject(-2);
 
-		testText = cipher.encrypt(testText);
+		  testText = "Hello, sir! It's a nice day today, isn't it, sir!";
 
-		window.alert("Encrypted: " + testText);
-
-		testText = cipher.decrypt(testText);
-
-		window.alert("Decrypted: " + testText);
+		  window.alert("The text: " + testText);
+		  testText = cipher.encrypt(testText);
+		  window.alert("Encrypted: " + testText);
+		  testText = cipher.decrypt(testText);
+		  window.alert("Decrypted: " + testText);
+		}
 	</script>
     </head>
     <body>
 	<div data-role="page" id="page1">
 		<div data-role="header">
-			<!-- header goes here -->
+			<h1>
+			Caesar Crypt
+			</h1>
 		</div>
 		<div data-role="content">
-			<!-- content goes here -->
-			<div data-role="popup" id="authorInfo" style="background-color: black;">
+		<div id="notesContainer">
+		</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<a href="#page2" id="btnNew" data-role="button" data-icon="plus" style="margin-left:5px">New</a>
+			<a href="#page3" data-role="button" data-icon="info" class="ui-btn-right">About</a>
+		</div>
+	</div>
+	<div data-role="page" id="page2">
+		<div data-role="header">
+			<h1>
+			Caesar Crypt
+			</h1>
+		</div>
+		<div data-role="content">
+			<label for="txtTitle">
+			<b>
+			Title:&nbsp;
+			</b>
+			</label>
+
+			<input type="text" id="txtTitle" />
+
+			<label for="txtBody">
+			<b>
+			Body:&nbsp;
+			</b>
+			</label>
+
+			<textarea id="txtBody" style="height:100%">
+			</textarea>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div id="editNote">
+			  <a href="#page1" id="btnDone" data-role="button" data-icon="check" style="margin-left:5px;">Done</a>
+			  <a href="#page1" id="btnCancel" data-role="button" data-icon="delete" class="ui-btn-right">Cancel</a>
+			</div>
+			<div id="viewNote">
+			  <a href="#page1" data-role="button" data-icon="back" class="ui-btn-left">Back</a>
+			  <a href="#page1" id="btnDelete" data-role="button" data-icon="delete" class="ui-btn-right">Delete</a>
+			</div>
+		</div>
+	</div>
+	<div data-role="page" id="page3">
+		<div data-role="header">
+			<h1>
+			Caesar Crypt
+			</h1>
+
+		</div>
+		<div data-role="content">
 			<p>
 			Copyright 2015<br />
 			Joel Cool-Panama<br />
 			&lt;mr.jkuhl@gmail.com&gt;
 			</p>
-			</div>
 		</div>
-		<div data-role="footer">
-			<!-- footer goes here -->
-			<a href="#authorInfo" data-rel="popup" data-position-to="window">Author</a>
+		<div data-role="footer" data-position="fixed">
+			<a href="#page1" data-role="button" data-icon="back" style="margin-left:5px;">Back</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
-	<script type="text/javascript">
-		app.initialize();
-	</script>
     </body>
 </html>
