--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <title>Template 1</title>
+        <title>Caesar Crypt</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js">
 	</script>
 	<script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js">
