Commented out the cipher test in index.html.

--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,10 @@
 	<script type="text/javascript" src="js/note.js"></script>
 	<script type="text/javascript">
 
-		document.addEventListener("deviceready", test, false);
+		//document.addEventListener("deviceready", test, false);
 
 		function test() {
 
-		  var note = new NoteObject();
 		  var cipher = new CipherObject(-2);
 
 		  testText = "Hello, sir! It's a nice day today, isn't it, sir!";
