Commented out edit mode buttons.

--- a/www/index.html
+++ b/www/index.html
@@ -84,10 +84,10 @@
 			  <a href="#page1" id="btnDone" data-role="button" data-icon="check" style="margin-left:5px;">Done</a>
 			  <a href="#page1" id="btnCancel" data-role="button" data-icon="delete" class="ui-btn-right">Cancel</a>
 			</div>
-			<div id="viewNote">
+			<!--<div id="viewNote">
 			  <a href="#page1" data-role="button" data-icon="back" class="ui-btn-left">Back</a>
 			  <a href="#page1" id="btnDelete" data-role="button" data-icon="delete" class="ui-btn-right">Delete</a>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<div data-role="page" id="page3">
